changed the gibberish

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ http://www.tooplate.com/view/2081-solution
 				<div class="row">
 					<div class="col-md-3 col-sm-4 wow fadeInLeft" data-wow-delay="0.6s">
 						<h2><strong>C0mputer &amp Cellphone Repair</strong></h2>
-						<p>Quisque at elit sapien. Sed velit enim, fringilla non suscipit quis, tristique et turpis. Proin vitae nisi justo.</p>
+						<p>Call us today to get all your questions answered.</p>
 						<ul class="social-icon">
 							<li><a href="#" class="fa fa-facebook"></a></li>
 							<li><a href="#" class="fa fa-twitter"></a></li>
