--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ http://www.tooplate.com/view/2081-solution
 						<div class="plan plan_one">
 							<h4 class="plan_title">Cracked Screen</h4>
 							<ul>
-								<li>11, 11 Pro, X, 8 iPhone</li>
+								<li>11,11 Pro,X,8 iPhone</li>
 								<li>Samsung</li>
 								<li>LG</li>
 								<li>iPad</li>
